Demos/2_NSG/NSGDemoSolution/NSGDemoSolution/Templates/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "Southeast Asia",
      "metadata": {
        "description": "This is the region where the resources will be created"
      }
    },
    "virtualNetworkName": {
      "type": "string",
      "defaultValue": "nsgdemoVNet",
      "metadata": {
        "description": "This is your Virtual Network"
      }
    },
    "addressPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/16",
      "metadata": {
        "description": "The CIDR address space for your Virtual Network in Azure"
      }
    },
    "FESubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/24",
      "metadata": {
        "description": "This is CIDR prefix for the FrontEnd Subnet"
      }
    },
    "AppSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.1.0/24",
      "metadata": {
        "description": "This is CIDR prefix for the Application Subnet"
      }
    },
    "DBSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.2.0/24",
      "metadata": {
        "description": "This is CIDR prefix for the Database Subnet"
      }
    },
    "FENSGName": {
      "type": "string",
      "defaultValue": "FE_NSG",
      "metadata": {
        "description": "This is name of the networkSecurityGroup that will be assigned to FrontEnd Subnet"
      }
    },
    "AppNSGName": {
      "type": "string",
      "defaultValue": "App_NSG",
      "metadata": {
        "description": "This is name of the networkSecurityGroup that will be assigned to Application Subnet"
      }
    },
    "DBNSGName": {
      "type": "string",
      "defaultValue": "DB_NSG",
      "metadata": {
        "description": "This is name of the networkSecurityGroup that will be assigned to Database Subnet"
      }
    },
    "nsgdemostorageType": {
      "type": "string",
      "defaultValue": "Standard_LRS",
      "allowedValues": [
        "Standard_LRS",
        "Standard_ZRS",
        "Standard_GRS",
        "Standard_RAGRS",
        "Premium_LRS"
      ]
    },
    "FENicName": {
      "type": "string",
      "defaultValue": "FENic",
      "minLength": 1
    },
    "AppNicName": {
      "type": "string",
      "defaultValue": "AppNic",
      "minLength": 1
    },
    "DBNicName": {
      "type": "string",
      "defaultValue": "DBNic",
      "minLength": 1
    },
    "FEPublicIPDnsName": {
      "type": "string",
      "defaultValue": "fepublicdns",
      "minLength": 1
    },
    "AppPublicIPDnsName": {
      "type": "string",
      "defaultValue": "apppublicdns",
      "minLength": 1
    },
    "DBPublicIPDnsName": {
      "type": "string",
      "defaultValue": "dbpublicdns",
      "minLength": 1
    },
    "fewinvmName": {
      "type": "string",
      "defaultValue": "fewinvm",
      "minLength": 1
    },
    "fewinvmAdminUserName": {
      "type": "string",
      "defaultValue": "demouser",
      "minLength": 1
    },
    "fewinvmAdminPassword": {
      "type": "securestring",
      "defaultValue": "demouser@123"
    },
    "fewinvmWindowsOSVersion": {
      "type": "string",
      "defaultValue": "2012-R2-Datacenter",
      "allowedValues": [
        "2008-R2-SP1",
        "2012-Datacenter",
        "2012-R2-Datacenter",
        "Windows-Server-Technical-Preview"
      ]
    },
    "appwinvmName": {
      "type": "string",
      "defaultValue": "appwinvm",
      "minLength": 1
    },
    "appwinvmAdminUserName": {
      "type": "string",
      "defaultValue": "demouser",
      "minLength": 1
    },
    "appwinvmAdminPassword": {
      "type": "securestring",
      "defaultValue": "demouser@123"
    },
    "appwinvmWindowsOSVersion": {
      "type": "string",
      "defaultValue": "2012-R2-Datacenter",
      "allowedValues": [
        "2008-R2-SP1",
        "2012-Datacenter",
        "2012-R2-Datacenter",
        "Windows-Server-Technical-Preview"
      ]
    },
    "dbwinvmName": {
      "type": "string",
      "defaultValue": "dbwinvm",
      "minLength": 1
    },
    "dbwinvmAdminUserName": {
      "type": "string",
      "defaultValue": "demouser",
      "minLength": 1
    },
    "dbwinvmAdminPassword": {
      "type": "securestring",
      "defaultValue": "demouser@123"
    },
    "dbwinvmWindowsOSVersion": {
      "type": "string",
      "defaultValue": "2012-R2-Datacenter",
      "allowedValues": [
        "2008-R2-SP1",
        "2012-Datacenter",
        "2012-R2-Datacenter",
        "Windows-Server-Technical-Preview"
      ]
    }
  },
  "resources": [
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('FENSGName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "rdp_rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "web_rule",
            "properties": {
              "description": "Allow WEB",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('AppNSGName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow_FE",
            "properties": {
              "description": "Allow FE Subnet",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "10.0.0.0/24",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Block_RDP_Internet",
            "properties": {
              "description": "Block RDP",
              "protocol": "tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "Block_Internet_Outbound",
            "properties": {
              "description": "Block Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 200,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('DBNSGName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow_App",
            "properties": {
              "description": "Allow APP Subnet",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "10.0.1.0/24",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "rdp_rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "[parameters('FESubnetPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "Block_App",
            "properties": {
              "description": "Block App Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "10.0.1.0/24",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 102,
              "direction": "Inbound"
            }
          },
          {
            "name": "Block_Internet",
            "properties": {
              "description": "Block Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 200,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('virtualNetworkName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', parameters('FENSGName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', parameters('AppNSGName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', parameters('DBNSGName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('addressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "FESubnetName",
            "properties": {
              "addressPrefix": "[parameters('FESubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('FENSGName'))]"
              }
            }
          },
          {
            "name": "AppSubnetName",
            "properties": {
              "addressPrefix": "[parameters('AppSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('AppNSGName'))]"
              }
            }
          },
          {
            "name": "DBSubnetName",
            "properties": {
              "addressPrefix": "[parameters('DBSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('DBNSGName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "name": "[variables('nsgdemostorageName')]",
      "type": "Microsoft.Storage/storageAccounts",
      "location": "[resourceGroup().location]",
      "apiVersion": "2015-05-01-preview",
      "dependsOn": [ ],
      "tags": {
        "displayName": "nsgdemostorage"
      },
      "properties": {
        "accountType": "[parameters('nsgdemostorageType')]"
      }
    },
    {
      "name": "[variables('FEPublicIPName')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "location": "[parameters('location')]",
      "apiVersion": "2015-05-01-preview",
      "dependsOn": [ ],
      "tags": {
        "displayName": "FEPublicIP"
      },
      "properties": {
        "publicIPAllocationMethod": "Dynamic",
        "dnsSettings": {
          "domainNameLabel": "[parameters('FEPublicIPDnsName')]"
        }
      }
    },
    {
      "name": "[variables('AppPublicIPName')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "location": "[parameters('location')]",
      "apiVersion": "2015-05-01-preview",
      "dependsOn": [ ],
      "tags": {
        "displayName": "AppPublicIP"
      },
      "properties": {
        "publicIPAllocationMethod": "Dynamic",
        "dnsSettings": {
          "domainNameLabel": "[parameters('AppPublicIPDnsName')]"
        }
      }
    },
    {
      "name": "[variables('DBPublicIPName')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "location": "[parameters('location')]",
      "apiVersion": "2015-05-01-preview",
      "dependsOn": [ ],
      "tags": {
        "displayName": "DBPublicIP"
      },
      "properties": {
        "publicIPAllocationMethod": "Dynamic",
        "dnsSettings": {
          "domainNameLabel": "[parameters('DBPublicIPDnsName')]"
        }
      }
    },
    {
      "name": "[variables('fewinvmNicName')]",
      "type": "Microsoft.Network/networkInterfaces",
      "location": "[parameters('location')]",
      "apiVersion": "2015-05-01-preview",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIPAddresses/', variables('FEPublicIPName'))]",
        "[concat('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]"
      ],
      "tags": {
        "displayName": "fewinvmNic"
      },
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('FEPublicIPName'))]"
              },
              "subnet": {
                "id": "[variables('fewinvmSubnetRef2')]"
              }
            }
          }
        ]
      }
    },
    {
      "name": "[parameters('fewinvmName')]",
      "type": "Microsoft.Compute/virtualMachines",
      "location": "[parameters('location')]",
      "apiVersion": "2015-05-01-preview",
      "dependsOn": [
        "[concat('Microsoft.Storage/storageAccounts/', variables('nsgdemostorageName'))]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('fewinvmNicName'))]"
      ],
      "tags": {
        "displayName": "fewinvm"
      },
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('fewinvmVmSize2')]"
        },
        "osProfile": {
          "computerName": "[parameters('fewinvmName')]",
          "adminUsername": "[parameters('fewinvmAdminUsername')]",
          "adminPassword": "[parameters('fewinvmAdminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('fewinvmImagePublisher2')]",
            "offer": "[variables('fewinvmImageOffer2')]",
            "sku": "[parameters('fewinvmWindowsOSVersion')]",
            "version": "latest"
          },
          "osDisk": {
            "name": "fewinvmOSDisk",
            "vhd": {
              "uri": "[concat('http://', variables('nsgdemostorageName'), '.blob.core.windows.net/', variables('fewinvmStorageAccountContainerName2'), '/', variables('fewinvmOSDiskName2'), '.vhd')]"
            },
            "caching": "ReadWrite",
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('fewinvmNicName'))]"
            }
          ]
        }
      }
    },
    {
      "name": "[variables('appwinvmNicName')]",
      "type": "Microsoft.Network/networkInterfaces",
      "location": "[parameters('location')]",
      "apiVersion": "2015-05-01-preview",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIPAddresses/', variables('AppPublicIPName'))]",
        "[concat('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]"
      ],
      "tags": {
        "displayName": "appwinvmNic"
      },
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('AppPublicIPName'))]"
              },
              "subnet": {
                "id": "[variables('appwinvmSubnetRef')]"
              }
            }
          }
        ]
      }
    },
    {
      "name": "[parameters('appwinvmName')]",
      "type": "Microsoft.Compute/virtualMachines",
      "location": "[parameters('location')]",
      "apiVersion": "2015-05-01-preview",
      "dependsOn": [
        "[concat('Microsoft.Storage/storageAccounts/', variables('nsgdemostorageName'))]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('appwinvmNicName'))]"
      ],
      "tags": {
        "displayName": "appwinvm"
      },
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('appwinvmVmSize')]"
        },
        "osProfile": {
          "computerName": "[parameters('appwinvmName')]",
          "adminUsername": "[parameters('appwinvmAdminUsername')]",
          "adminPassword": "[parameters('appwinvmAdminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('appwinvmImagePublisher')]",
            "offer": "[variables('appwinvmImageOffer')]",
            "sku": "[parameters('appwinvmWindowsOSVersion')]",
            "version": "latest"
          },
          "osDisk": {
            "name": "appwinvmOSDisk",
            "vhd": {
              "uri": "[concat('http://', variables('nsgdemostorageName'), '.blob.core.windows.net/', variables('appwinvmStorageAccountContainerName'), '/', variables('appwinvmOSDiskName'), '.vhd')]"
            },
            "caching": "ReadWrite",
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('appwinvmNicName'))]"
            }
          ]
        }
      }
    },
    {
      "name": "[variables('dbwinvmNicName')]",
      "type": "Microsoft.Network/networkInterfaces",
      "location": "[parameters('location')]",
      "apiVersion": "2015-05-01-preview",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIPAddresses/', variables('DBPublicIPName'))]",
        "[concat('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]"
      ],
      "tags": {
        "displayName": "dbwinvmNic"
      },
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('DBPublicIPName'))]"
              },
              "subnet": {
                "id": "[variables('dbwinvmSubnetRef')]"
              }
            }
          }
        ]
      }
    },
    {
      "name": "[parameters('dbwinvmName')]",
      "type": "Microsoft.Compute/virtualMachines",
      "location": "[parameters('location')]",
      "apiVersion": "2015-05-01-preview",
      "dependsOn": [
        "[concat('Microsoft.Storage/storageAccounts/', variables('nsgdemostorageName'))]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('dbwinvmNicName'))]"
      ],
      "tags": {
        "displayName": "dbwinvm"
      },
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('dbwinvmVmSize')]"
        },
        "osProfile": {
          "computerName": "[parameters('dbwinvmName')]",
          "adminUsername": "[parameters('dbwinvmAdminUsername')]",
          "adminPassword": "[parameters('dbwinvmAdminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('dbwinvmImagePublisher')]",
            "offer": "[variables('dbwinvmImageOffer')]",
            "sku": "[parameters('dbwinvmWindowsOSVersion')]",
            "version": "latest"
          },
          "osDisk": {
            "name": "dbwinvmOSDisk",
            "vhd": {
              "uri": "[concat('http://', variables('nsgdemostorageName'), '.blob.core.windows.net/', variables('dbwinvmStorageAccountContainerName'), '/', variables('dbwinvmOSDiskName'), '.vhd')]"
            },
            "caching": "ReadWrite",
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('dbwinvmNicName'))]"
            }
          ]
        }
      }
    }
  ],
    "variables": {
        "nsgdemostorageName": "[concat('nsgstg', uniqueString(resourceGroup().id))]",
        "FENicVnetID": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]",
        "FENicSubnetRef": "[concat(variables('FENicVnetID'), '/subnets/', 'FESubnetName')]",
        "AppNicVnetID": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]",
        "AppNicSubnetRef": "[concat(variables('AppNicVnetID'), '/subnets/', 'AppSubnetName')]",
        "DBNicVnetID": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]",
        "DBNicSubnetRef": "[concat(variables('DBNicVnetID'), '/subnets/', 'DBSubnetName')]",
        "FEWinVMImagePublisher": "MicrosoftWindowsServer",
        "FEWinVMImageOffer": "WindowsServer",
        "FEWinVMOSDiskName": "FEWinVMOSDisk",
        "FEWinVMVmSize": "Standard_D1",
        "FEWinVMVnetID": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]",
        "FEWinVMSubnetRef": "[concat(variables('FEWinVMVnetID'), '/subnets/', 'FESubnetName')]",
        "FEWinVMStorageAccountContainerName": "vhds",
        "FEPublicIPName": "FEPublicIP",
        "AppPublicIPName": "AppPublicIP",
        "DBPublicIPName": "DBPublicIP",
        "fewinvmImagePublisher2": "MicrosoftWindowsServer",
        "fewinvmImageOffer2": "WindowsServer",
        "fewinvmOSDiskName2": "fewinvmOSDisk",
        "fewinvmVmSize2": "Standard_D1",
        "fewinvmVnetID2": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]",
        "fewinvmSubnetRef2": "[concat(variables('fewinvmVnetID2'), '/subnets/', 'FESubnetName')]",
        "fewinvmStorageAccountContainerName2": "vhds",
        "fewinvmNicName": "[concat(parameters('fewinvmName'), 'NetworkInterface')]",
        "appwinvmImagePublisher": "MicrosoftWindowsServer",
        "appwinvmImageOffer": "WindowsServer",
        "appwinvmOSDiskName": "appwinvmOSDisk",
        "appwinvmVmSize": "Standard_D1",
        "appwinvmVnetID": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]",
        "appwinvmSubnetRef": "[concat(variables('appwinvmVnetID'), '/subnets/', 'AppSubnetName')]",
        "appwinvmStorageAccountContainerName": "vhds",
        "appwinvmNicName": "[concat(parameters('appwinvmName'), 'NetworkInterface')]",
        "dbwinvmImagePublisher": "MicrosoftWindowsServer",
        "dbwinvmImageOffer": "WindowsServer",
        "dbwinvmOSDiskName": "dbwinvmOSDisk",
        "dbwinvmVmSize": "Standard_D1",
        "dbwinvmVnetID": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]",
        "dbwinvmSubnetRef": "[concat(variables('dbwinvmVnetID'), '/subnets/', 'DBSubnetName')]",
        "dbwinvmStorageAccountContainerName": "vhds",
        "dbwinvmNicName": "[concat(parameters('dbwinvmName'), 'NetworkInterface')]"
    }
}
